Add same dummy content, change licence to BSD copyright

--- a/index.html
+++ b/index.html
@@ -1,6 +1,30 @@
+
 <!DOCTYPE html>
 <html>
+<link rel="copyright" href="Copyright.txt" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 <body>
-Csumi!
+<h3>Ahoy!</h3>
+<p>My name is Balazs Kelemen.</p>
+<p>
+I hack mainly on web browser engines: Chromium, WebKit,
+Blink, Samsung Browser and what not.
+</p>
+<p>
+That is a humble site to collect my testing stuff. Who knows, maybe one day it
+might even become a quality web site.
+</p>
+<p>
+Contact: <a href="mailto:kbalazs@webkit.org">kbalazs@webkit.org</a>
+</p>
+<p>
+<br/>
+<h3>Testing stuff</h3>
+(Coming soon...)
+<ul>
+<!-- add stuff -->
+</ul>
+</p>
 </body>
 </html>
