--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ Contact: <a href="mailto:kbalazs@webkit.org">kbalazs@webkit.org</a>
 <h3>Testing stuff</h3>
 (Coming soon...)
 <ul>
+<li><a href="webpush/index.html">Web Push demo</a></li>
 <!-- add stuff -->
 </ul>
 </p>
