Simple push demo from gauntface, redeployed

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ Contact: <a href="mailto:kbalazs@webkit.org">kbalazs@webkit.org</a>
 (Coming soon...)
 <ul>
 <li><a href="webpush/index.html">Web Push demo</a></li>
+<li><a href="spd-deploy/index.html">Simple Push Demo (from gauntface, redeployed)</a></li>
 <!-- add stuff -->
 </ul>
 </p>
