--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Contact: <a href="mailto:kbalazs@webkit.org">kbalazs@webkit.org</a>
 <ul>
 <li><a href="webpush/index.html">Web Push demo</a></li>
 <li><a href="spd-deploy/index.html">Simple Push Demo (from gauntface, redeployed)</a></li>
-<!-- add stuff -->
+<li><a href="ccautofill/form.html">CC autofill</a></li>
 </ul>
 </p>
 </body>
