--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ Contact: <a href="mailto:kbalazs@webkit.org">kbalazs@webkit.org</a>
 <li><a href="webpush/index.html">Web Push demo</a></li>
 <li><a href="spd-deploy/index.html">Simple Push Demo (from gauntface, redeployed)</a></li>
 <li><a href="ccautofill_php/form.html">CC autofill</a></li>
+<li><a href="spayrewards/test.html">Spay rewards test</a></li>
 </ul>
 </p>
 </body>
