--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <body>
-<h3>Ahoy!</h3>
+<h3>Greetings!</h3>
 <p>My name is Balazs Kelemen.</p>
 <p>
 I hack mainly on web browser engines: Chromium, WebKit,
 Blink, Samsung Browser and what not.
 </p>
 <p>
-That is a humble site to collect my testing stuff. Who knows, maybe one day it
-might even become a quality web site.
+That's all just testing stuff. Nothing to see here, walk along citizen!
 </p>
 <p>
 Contact: <a href="mailto:kbalazs@webkit.org">kbalazs@webkit.org</a>
@@ -21,12 +20,12 @@ Contact: <a href="mailto:kbalazs@webkit.org">kbalazs@webkit.org</a>
 <p>
 <br/>
 <h3>Testing stuff</h3>
-(Coming soon...)
 <ul>
 <li><a href="webpush/index.html">Web Push demo</a></li>
 <li><a href="spd-deploy/index.html">Simple Push Demo (from gauntface, redeployed)</a></li>
 <li><a href="ccautofill_php/form.html">CC autofill</a></li>
 <li><a href="spayrewards/test.html">Spay rewards test</a></li>
+<li><a href="adp_frames/index.html">ADP blocking with iframes test</a></li>
 </ul>
 </p>
 </body>
