--- a/adp_frames/index.html
+++ b/adp_frames/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" href="css/main.css">
+</head>
 <body>
   <div class="site-container">
     <section class="site-panel">
