--- a/adp_frames/frame/frame.html
+++ b/adp_frames/frame/frame.html
@@ -4,6 +4,6 @@
     <div class="testcase-elemhide">Target</div>
     <img src="../image.jpg"/>
     <h3>Nested frame elements</h3>
-    <iframe src="frame2.html" style="width: 100%;"></iframe>
+    <iframe src="frame_nested.html" style="width: 100%;"></iframe>
   </body>
 </html>
