--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ Contact: <a href="mailto:kbalazs@webkit.org">kbalazs@webkit.org</a>
 <li><a href="ccautofill_php/form.html">CC autofill</a></li>
 <li><a href="spayrewards/test.html">Spay rewards test</a></li>
 <li><a href="adp_frames/index.html">ADP blocking with iframes test</a></li>
+<li><a href="cbtest/new-tab-test.html">CB test</a></li>
 </ul>
 </p>
 </body>
